# claude-notify

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/tasks/: open-items.md
src/: focus.rs  main.rs  register.rs  send.rs
