[package]
name = "claude-notify"
version = "0.1.0"
edition = "2021"
description = "Tiny Windows toast notifier for Claude Code hooks running under WSL"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
